fix flickering, better transition

--- a/apps/video/src/components/Player.module.scss
+++ b/apps/video/src/components/Player.module.scss
@@ -39,13 +39,13 @@ $dropShadow: drop-shadow(0px 4px 100px rgba(0, 0, 0, 0.4));
       .visualisationContainer {
         display: flex;
         align-items: center;
-        gap: .2rem;
+        gap: 0.3rem;
         height: 100%;
 
         .visualisation {
           background-color: #fff;
           border-radius: 1rem;
-          width: 5px;
+          width: 7px;
           height: 100%;
         }
       }
