--- a/apps/video/src/components/SongSequence.module.scss
+++ b/apps/video/src/components/SongSequence.module.scss
@@ -3,11 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: #fff;
   width: 100%;
   height: 100%;
   padding: 20% 0;
-  transition: .5s;
 
   .playersContainer {
     display: flex;
